orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
    <description>Real estate listings - BlackRoad Agency CRM</description>
    <label>Listing</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>