orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Listing__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Seller</label>
    <type>Lookup</type>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
</CustomField>