orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Listing__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>