orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Listing__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single Family</fullName><default>false</default><label>Single Family</label></value>
            <value><fullName>Condo</fullName><default>false</default><label>Condo</label></value>
            <value><fullName>Townhouse</fullName><default>false</default><label>Townhouse</label></value>
            <value><fullName>Multi-Family</fullName><default>false</default><label>Multi-Family</label></value>
            <value><fullName>Land</fullName><default>false</default><label>Land</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>